# Synthius

./: .gitignore  .gitmodules  Original.csv  README.md  Real.csv  instructions.md  pyproject.toml
.github/workflows/: lint.yml  mypy.yml  publish.yml  ruff.yml
.github/workflows/matchers/: mypy.json  ruff.json
example/: 1_generator.ipynb  3_evaluation.ipynb
examples/: 1-getting-started.ipynb  1_generator.ipynb  2-synthius-models.ipynb  2_autogloun.ipynb  3-user-defined-models.ipynb  3_evaluation.ipynb  4_optimization.ipynb  demo.ipynb  run_inference.py
examples/AutogluonModels/ag-20251118_153217/: learner.pkl
examples/AutogluonModels/ag-20251118_153218/: learner.pkl
examples/AutogluonModels/ag-20251118_153219/: learner.pkl
examples/AutogluonModels/ag-20251118_153220/: learner.pkl
examples/AutogluonModels/ag-20251118_153220-001/: learner.pkl
examples/AutogluonModels/ag-20251118_153221/: learner.pkl
examples/AutogluonModels/ag-20251118_153222/: learner.pkl
examples/AutogluonModels/ag-20251118_153222-001/: learner.pkl
examples/AutogluonModels/ag-20251118_153224/: learner.pkl
examples/AutogluonModels/ag-20251118_153225/: learner.pkl
examples/AutogluonModels/ag-20251118_153225-001/: learner.pkl
examples/AutogluonModels/ag-20251118_153225-002/: learner.pkl
examples/AutogluonModels/ag-20251118_153225-003/: learner.pkl
examples/AutogluonModels/ag-20251118_153226/: learner.pkl
examples/AutogluonModels/ag-20251118_153227-001/: learner.pkl
examples/TempAGModel/ARF/: learner.pkl
examples/data/: adult_subset.csv  example-data.ipynb  iris_setosa_vs_all.csv  test.csv  train.csv
examples/metrics/: metrics.csv  results.csv
examples/results/: ARF.csv  CTGAN.csv  CopulaGAN.csv  GaussianMultivariate.csv  TVAE.csv
examples/synthetic_data/: ARF.csv  CTGAN.csv  CTGANSynthesizer.csv  CopulaGAN.csv  CopulaGANSynthesizer.csv  GaussianCopulaSynthesizer.csv  GaussianMultivariate.csv  TVAE.csv  TVAESynthesizer.csv
synthetic_data/: config.py
synthius/: __init__.py
synthius/api/: autogluon_api.py  generator.py  generator_api.py  high_level.py  high_level_api.py  metrics.py  metrics_api.py
synthius/automation/: __init__.py  metrics_map.py  models.py  pipeline.py
synthius/data/: __init__.py  data_imputer.py  dataset_torch.py  encoder.py  uniform_encoder.py
synthius/metric/: __init__.py  advanced_quality.py  basic_quality.py  fairness.py  inference.py  likelihood.py  linkability.py  membership_inference_attack.py  privacy_against_inference.py  propensity.py  singlingout.py
synthius/model/: __init__.py  arf.py  autogloun.py  gaussian_multivariate.py  sdv_synthesizers.py  sdvsynthesizer.py  synthesizer.py  synthiussynthesizers.py  tabdiff.py  wgan.py
synthius/optimization/: __init__.py
synthius/utilities/: metric_evaluator.py
(+700 files in other folders)
