[tool.poetry]
name = "synthius"
version = "0.3.0"
description = "A toolkit for generating and evaluating synthetic data in terms of utility, privacy, and similarity"
authors = ["Maryam Mohebi <maryam@mohebi.me>"]
readme = "README.md"
packages = [{ include = "synthius" }]
license = "MIT"
keywords = [
    "synthetic data",
    "privacy",
    "utility",
    "similarity",
    "fidelity",
    "machine learning",
]
repository = "https://github.com/calgo-lab/Synthius"
homepage = "https://github.com/calgo-lab/Synthius"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pomegranate = "0.15.0"
sdv = "^1.15.0"
sdmetrics = "^0.15.0"
autogluon-tabular = { version = "^1.1.1", extras = ["all"] }
pandas = "^2.2.2"
scikit-learn = "^1.4.0"
tqdm = "^4.66.4"
arfpy = "^0.1.1"
anonymeter = { git = "https://github.com/itrajanovska/anonymeter.git", tag = "v1.0.0" }
tensorflow = "2.16.2"
torch = "2.2.2"
dill = "^0.3.9"
tabulate = "^0.9.0"
types-tabulate = "^0.9.0.20241207"
# from tabdiff
numpy = ">=1.26.4,<2.1"
scipy = ">=1.15.0,<2.0"
icecream = ">=2.1.8,<3.0"
xlrd = ">=2.0.2,<3.0"
tomli-w = ">=1.2.0,<2.0"
tomli = ">=2.0.1,<3.0"
category_encoders = ">=2.7.0,<3.0"
imbalanced-learn = ">=0.14.0,<0.15"
kaggle = ">=1.7.4.5,<2.0"
transformers = ">=4.50.3,<5.0"
datasets = ">=2.2.1,<3.0"
peft = ">=0.9.0,<1.0"
ml_collections = ">=1.1.0,<2.0"
prdc = ">=0.2,<0.3"
rdt = ">=1.13.2,<2.0"
openpyxl = ">=3.1.5,<4.0"
xgboost = ">=2.1.3,<3.0"
wandb = ">=0.17.3,<1.0"
kaleido = ">=1.2.0,<2.0"
adversarial-robustness-toolbox = "^1.20.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
mypy = "^1.15.0"
ruff = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 160
target-version = "py310"
fix = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    "D100",   # Do not document public modules
    "D104",   # Do not document public packages
    "TD003",  # Allow TODOs without links
    "ISC003", # Do not implicitly concatenate strings
    "COM812", # Do not check trailing commas in function calls
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # unused imports in __init__ files can make sense
]
"examples/**" = [
    "TD002",  # allow TODOs in examples
    "FIX002", # allow TODO without author
    "ERA001", # allow comment code examples
]
"synthius/TabDiff/**" = [
    "ALL",  # ignore all rules for everything in TabDiff
]

[tool.ruff.lint.pydocstyle]
convention = "google"
